<resources>
    <string name="app_name">ER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="main_fragment_text">欢迎开启阅读之旅</string>
    <string name="test_fragment_text">测试</string>
    <string name="user_center_fragment_text">个人中心</string>
    <string name="learn_fragment_text">学习</string>
    <string name="learn_fragment_title">学习库</string>
    <string name="title_back">返回</string>
    <string name="article_look">文章欣赏</string>
    <string name="dl_read">段落阅读</string>
    <string name="my_mj">名言名句</string>
    <string name="user_center_my_log">M1 我的日志</string>
    <string name="user_center_study_cj">M2 学习成绩</string>
    <string name="user_center_task_center">M3 任务中心</string>
    <string name="section_a">Section A 选词填空</string>
    <string name="section_b">Section B 阅读理解</string>
    <string name="please_hope">(敬请期待...)</string>
    <string name="please_hope2">敬请期待...</string>
    <string name="u1">U1 初级篇</string>
    <string name="u2">U2 中级篇</string>
    <string name="u3">U3 高级篇</string>
</resources>
