<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/main_bg"
                tools:context="ed.edu.shisu.englishreading.fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/black"
        android:layout_marginTop="30dp"
        android:text="@string/test_fragment_text"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_section_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_big"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/black"
            android:text="@string/section_a"/>
        <TextView
            android:id="@+id/tv_section_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_big"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/black"
            android:layout_marginTop="6dp"
            android:text="@string/section_b"/>

    </LinearLayout>

</RelativeLayout>
