<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
    android:background="@mipmap/main_bg">

    <include layout="@layout/base_title"/>

    <TextView
        android:id="@+id/tv_text_title"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:text="Text 1"
        android:gravity="center"
        android:padding="6dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_wzxs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/article_look"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/tv_dlyd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dl_read"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"/>

        <TextView
            android:id="@+id/tv_mymj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/my_mj"
            android:textColor="@drawable/selector_tab_text_color"
            android:textSize="@dimen/text_size_normal"/>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


</LinearLayout>
